# automation-demo

./: .env.example  .gitignore  README.md  bot.py  outlook.py  pyproject.toml
uc/: gov.py  handle_job.py  handle_login.py  handle_page_access.py  handle_sign.py  handle_task.py  job.py  utils.py
